feat: Add x402 search and discovery features
- Add intelligent search with NLP-powered natural language query
- Add automated crawler system for discovering x402 endpoints
- Add background crawler service (runs every 20 minutes)
- Add GitHub crawler with token support and rate limiting
- Add facilitator synchronization from multiple sources
- Add user endpoint submission functionality
- Add keyword highlighting in search results
- Add progress tracking for crawler operations
- Add comprehensive documentation (FEATURES_AND_ROADMAP.md)
- Add JSON-based resource storage
- Add statistics API endpoint

--- a/typescript/site/.gitignore
+++ b/typescript/site/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# auto-generated endpoint list
+app/api/discovery/endpoints.json
+
+# SQLite database
+*.db
+.data/
+app/api/discovery/discovery.db
+
+# JSON storage
+app/api/discovery/resources.json
