--- a/typescript/site/package.json
+++ b/typescript/site/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@vercel/functions": "^2.2.8",
+    "better-sqlite3": "^12.4.1",
     "next": "15.5.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -30,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.24.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
